--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <nav>
-        <h1 class="weather-app__title">Clair obscur <img src="favico.svg" alt="" style="height: 40px;"> </h1>
+        <h1 class="weather-app__title">Clair obscur <img src="favico.svg" alt="" style="height: 0px;"> </h1>
     </nav>
 
     <form id="weatherForm" class="weather-form">
@@ -23,6 +23,10 @@
    
   </div>
   <div class="weather-data-container">
+    <div class="weather-data"></div>
+    
+  </div>
+  
 
 </body>
 </html>
