add date del update

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clair obscur</title>
+    <title>Clair  weather</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="favico.svg" type="image/x-icon">
     <script defer src="script.js"></script>
@@ -13,11 +13,11 @@
 </head>
 <body>
     <nav>
-        <h1 class="weather-app__title">Clair obscur <img src="favico.svg" alt="" style="height: 0px;"> </h1>
+        <h1 class="weather-app__title">Clair  weather <img src="favico.svg" alt="" style="height: 0px;"> </h1>
     </nav>
 
     <form id="weatherForm" class="weather-form">
-        <input type="text" class="weather-form__input" placeholder="Ou planifiez vous votre expedition ?">
+        <input type="text" class="weather-form__input" placeholder="In which city are you ?" id="cityInput" required>
         <button type="submit" class="weather-form__submit">Search</button>
     </form>
    
